<resources>
    <string name="app_name">Imperative Business Ventures Machine Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="corresponding_address">Corresponding Address</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="mothers_name">Mother\'s Name</string>
    <string name="fathers_name">Father\'s Name</string>
    <string name="occupation">Occupation</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="basic_details">Basic Details</string>
    <string name="address_details">Address Details</string>
    <string name="other_details">Other Details</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
</resources>