<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AllDetailsFragment">

    <TextView
        android:id="@+id/basicDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/nameData"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basicDetails" />

    <TextView
        android:id="@+id/nameData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/basicDetails" />

    <TextView
        android:id="@+id/mobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/mobileNumberData"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/mobileNumberData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mobileNumber"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/emailData"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumber" />

    <TextView
        android:id="@+id/emailData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumberData" />

    <TextView
        android:id="@+id/addressDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailData" />

    <TextView
        android:id="@+id/permanentAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permanent_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/permanentAddressData"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressDetails" />

    <TextView
        android:id="@+id/permanentAddressData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/permanentAddress"
        app:layout_constraintTop_toBottomOf="@+id/addressDetails" />

    <TextView
        android:id="@+id/corresponginAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corresponding_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/correspondingAddressData"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permanentAddress" />

    <TextView
        android:id="@+id/correspondingAddressData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/corresponginAddress"
        app:layout_constraintTop_toBottomOf="@+id/permanentAddressData" />

    <TextView
        android:id="@+id/otherDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correspondingAddressData" />

    <TextView
        android:id="@+id/mothersName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mothers_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/mothersNameData"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherDetails" />

    <TextView
        android:id="@+id/mothersNameData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mothersName"
        app:layout_constraintTop_toBottomOf="@+id/otherDetails" />

    <TextView
        android:id="@+id/fathersName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fathers_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fathersNameData"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mothersName" />

    <TextView
        android:id="@+id/fathersNameData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fathersName"
        app:layout_constraintTop_toBottomOf="@+id/mothersNameData" />

    <TextView
        android:id="@+id/occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occupation"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/occuptionData"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fathersName" />

    <TextView
        android:id="@+id/occuptionData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/occupation"
        app:layout_constraintTop_toBottomOf="@+id/fathersNameData" />

</androidx.constraintlayout.widget.ConstraintLayout>